src/app.css
/*Across everything*/
body {
  font-size: 1.2em;
  margin: 0px;
}

a {
  text-decoration: none;
  color: inherit;
}

text {
  font-family: 'Open Sans', sans-serif;
}

.header {
  font-family: 'Raleway', sans-serif;
  font-size: 2em;
}

.container {
  display: flex;
}

.vertical {
  flex-direction: column;
}

.horizontal {
  flex-direction: row;
}

.App {
  position: relative;
}

/*LeftBar*/
.info-bar {
  width: 30%;
  justify-content: flex-start;
  align-items: center;
  padding-bottom: 20px;
  position: fixed;
  bottom: 0;
}

#info-bar-sub-cont {
}

.info-bar-item {
  flex: 0 1 auto;
  align-items: center;;
}

#fa-links {
  width: 50%;
  justify-content: space-around;
}

.bio-link {
  font-size: 2em;
}

.info-bar img {
  min-width: 90%;
  max-width: 90%;
  border-radius: 50%;
}


/*View*/
.view * {
}

.view {
  flex: 0 1 70%;
  width: 70%;
  height: 100%;
  min-width: 650px;
  align-items: center;
  position: fixed;
  right: 0;
}

#filter-options {
  flex: 0 1 15%;
  width: 100%;
  justify-content: space-around;
  align-items: center;
  background: white;
}

.filter-option {
  flex: 0 1 50%;
  height: 100%;
  justify-content: center;
  align-items: center;
}

.filter-option:hover {
  background: black;
  color: white;
  font-weight: bold;
  cursor: pointer;
}

.main-content {
  -webkit-overflow-scrolling: touch;
  overflow-y: scroll;
  scroll-behavior: smooth;
  width: 90%;
  position: static;
  padding-top: 5%;
}

.main-content * {
  max-width: 100%;
}

.projects {
  flex: 0 1 calc(100% - 125px);
  align-items: center;
}

.project {
  flex: 1 0 auto;
  align-items: center;
  justify-content: space-between;
  padding-bottom: 7.5%;
  width: 90%;
}

.project img{
  max-width: 90%;
}

.blog_post {
  width: 90%;
}

@media only screen and (max-width: 850px) {
  .App {
    flex-direction: column;
  }

  .view {
    dispaly: flex;
    width: 100%;
    min-width: 320px;
    position: relative;
    justify-content: space-between;
    order: 1;
  }

  #filter-options {
    position: fixed;
    top: 0;
  }

  #info-bar {
    flex: 0 1 12.5%;
    width: 100%;

    background: white;
    flex-direction: row;
    align-items: center;
    padding: 0px;
    display: flex;
  }

  .main-content {
    top: 15%;
    bottom: 12.5%;
    position: fixed;
  }

  #info-bar-sub-cont {
    flex: 0 1 100%;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
  }

  #info-bar-sub-cont img {
    display: none;
  }

  #fa-links {
    justify-content: center;
  }

  .bio-link {
    padding: 0px 10px;
  }

}

@media only screen and (max-width: 415px) {
  #filter-options {
    height: 15%;
    background: #BFBFBF;
  }

  .main-content {
    bottom: 50px;
    padding-top: 1%;
    font-size: .7em;
  }

  #info-bar-sub-cont {
    font-size: .7em;
    background: #BFBFBF;
  }
}

